# EE416_Computer_Vision_Manager

./: CMakeLists.txt  CardButton.qml  CustomComboBox.qml  CustomDialog.qml  CustomRadioButton.qml  HomePage.qml  LiveViewerPage.qml  RemoteProgrammingPage.qml  SystemSettingsPage.qml  UploadModelPage.qml  controlworker.cpp  controlworker.h  cvmodelconfig.cpp  cvmodelconfig.h  dirtransfer.cpp  dirtransfer.h  gamepadhandler.cpp  gamepadhandler.h  instruction.cpp  instruction.h  jetsonnetwork.rep  main.cpp  main.qml  network.cpp  network.h  qml.qrc  remotecvmodel.rep  remotenetwork.rep  remotepipeline.rep  remotevehicle.rep  userprogram.cpp  userprogram.h  videocontroller.cpp  videocontroller.h  videopipeline.cpp  videopipeline.h  videosyncstart.cpp  videosyncstart.h
